<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.exasol</groupId>
    <artifactId>databricks-virtual-schema</artifactId>
    <version>0.3.0</version>
    <name>Virtual Schema for Databricks</name>
    <description>Virtual Schema for MySQL</description>
    <url>https://github.com/exasol/databricks-virtual-schema/</url>
    <properties>
        <!-- Java only used for tests, so we can use the latest Java features. -->
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>maven-project-version-getter</artifactId>
            <version>1.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>exasol-testcontainers</artifactId>
            <version>7.1.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>test-db-builder-java</artifactId>
            <version>3.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>hamcrest-resultset-matcher</artifactId>
            <version>1.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.itsallcode</groupId>
            <artifactId>hamcrest-auto-matcher</artifactId>
            <version>0.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>virtual-schema-shared-integration-tests</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.databricks</groupId>
            <artifactId>databricks-sdk-java</artifactId>
            <version>0.32.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.databricks</groupId>
            <artifactId>databricks-jdbc</artifactId>
            <version>2.6.40-patch-1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>2.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.16</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all,-path,-processing</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-jdbc-driver</id>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <phase>compile</phase>
                        <configuration>
                            <includeGroupIds>com.databricks</includeGroupIds>
                            <includeArtifactIds>databricks-jdbc</includeArtifactIds>
                            <outputDirectory>${project.build.directory}/databricks-jdbc-driver</outputDirectory>
                            <stripVersion>true</stripVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <!-- Run lua type check -->
                    <execution>
                        <id>lua-type-check</id>
                        <phase>test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/tools/run-type-check.sh</executable>
                            <useMavenLogger>false</useMavenLogger>
                        </configuration>
                    </execution>
                    <!-- Run lua unit tests -->
                    <execution>
                        <id>lua-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/tools/runtests.sh</executable>
                            <useMavenLogger>false</useMavenLogger>
                            <arguments>
                                <argument>--run=utest</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <!-- Run all lua tests -->
                    <execution>
                        <id>lua-integration-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/tools/runtests.sh</executable>
                            <useMavenLogger>false</useMavenLogger>
                            <arguments/>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Bundle the main script (dispatcher) and the modules into a single lua package 
                            that can be deployed as Lua adapter script. -->
                        <id>bundle</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <useMavenLogger>false</useMavenLogger>
                            <executable>luarocks</executable>
                            <arguments>
                                <argument>--local</argument>
                                <argument>make</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.exasol</groupId>
                <artifactId>project-keeper-maven-plugin</artifactId>
                <version>4.3.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.ossindex.maven</groupId>
                <artifactId>ossindex-maven-plugin</artifactId>
                <configuration>
                    <excludeVulnerabilityIds>
                        <!-- Transitive test dependency org.ini4j:ini4j:jar:0.5.4 via com.databricks:databricks-sdk-java:
                             Uncontrolled Resource Consumption is acceptable -->
                        <exclude>CVE-2022-41404</exclude>
                    </excludeVulnerabilityIds>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
        <artifactId>databricks-virtual-schema-generated-parent</artifactId>
        <groupId>com.exasol</groupId>
        <version>0.3.0</version>
        <relativePath>pk_generated_parent.pom</relativePath>
    </parent>
</project>
